# VoxFlow

./: .bartycrouch.toml  .env.example  .gitignore  .swiftlint.yml  AGENTS.md  CONTEXT.md  LICENSE  Makefile  Package.resolved  Package.swift  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  README_EN.md  docker-compose.landing.yml  implementation-notes-archive.md  implementation-notes.md  swiftgen.yml  vercel.json
Resources/: AppIcon.icns
agent-cli/: AGENT_YES_LICENSE  Cargo.toml  vox
agent-cli/src/: cli.rs  input.rs  ipc.rs  lib.rs  main.rs  mcp.rs  mcp_config.rs  paths.rs  pty.rs  router.rs  session.rs  wrapper.rs
agent-cli/tests/: cli_and_session_tests.rs  mcp_server_tests.rs  mcp_wiring_tests.rs  router_socket_tests.rs  router_tests.rs  terminal_wrapper_tests.rs
api/: wechat-signature.js
deploy/: Caddyfile  Dockerfile.landing  landing-server.js
docs/: ARCHITECTURE.md  MP_verify_1qnofqBMqq6muauP.txt  PRD.md  PRIVACY.md  TECHNICAL_DESIGN.md  TEST_PLAN.md  USER_FEEDBACK_ISSUES_2026-06-13.md  agent-dispatch-design.md  index.html  release.json  releases-data.js  remaining-tasks.md  resource-ownership.md  script.js  styles.css  third-party-clipboard-borrowing.md  third-party-licenses.md  third-party-selection-actions.md
docs-redirect/: index.html
scripts/: architecture_check.py  asr_benchmark.py  asr_parity_report.py  asr_reference_runner.py  bootstrap-sherpa-onnx.sh  build-landing-site.sh  build-mlx-metallib.sh  check-localization.py  check-release-metadata.py  cloudflare-upsert-record.sh  prepare-release.py  prepare-vercel-landing.sh  (+3 more)
(+1117 files in other folders)
